grammar.js
    translation_unit: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.program_block
      // $.module_block,
      // $.interface_block,
      // $.subroutine_block
      // $.functon_block,
    ),

    // Block level structures

    variable_declaration: $ => seq(
      $._intrinsic_type,
      optional(seq(',', commaSep1($.type_qualifier))),
      optional('::'),
      $._declaration_targets
    ),

    _declaration_targets: $ => commaSep1(choice(
      $.identifier,
      $.call_expression,
      $.assignment_statement,
      $.pointer_association_statement
    )),

    _intrinsic_type: $ => prec.right(seq(
      $.intrinsic_type,
      optional($.size)
    )),

    intrinsic_type: $ => choice(
      caseInsensitive('byte'),
      caseInsensitive('integer'),
      caseInsensitive('real'),
      caseInsensitive('double[ \t]*precision'),
      caseInsensitive('complex'),
      caseInsensitive('double[ \t]*complex'),
      caseInsensitive('logical'),
      caseInsensitive('character')
    ),

    size: $ => choice(
      $.argument_list,
      seq('*', choice(/\d+/, $.parenthesized_expression))
    ),

    _statement_label_reference: $ => alias($.statement_label, $.statement_label_reference),

    assignment_statement: $ => prec.right(PREC.ASSIGNMENT, seq(
      $._assignment_targets,
      '=',
      $._expression
    )),

    pointer_association_statement: $ => prec.right(seq(
      $._assignment_targets,
      '=>',
      $._expression
    )),

    _assignment_targets: $ => choice(
      $.identifier,
      $.derived_type_member_expression,
      $.call_expression
    ),

    subroutine_call: $ => seq(
      caseInsensitive('call'),
      $.call_expression
    ),

    write_statement: $ => seq(
      caseInsensitive('write'),
      '(',
      choice(
        $.unit_identifier,
        seq($.unit_identifier, ',', $.format_identifier),
        seq($.unit_identifier, ',', commaSep1($.keyword_argument)),
        commaSep1($.keyword_argument)
      ),
      ')',
      optional($.output_item_list)
    ),

    // precedence is used to override a conflict with the complex literal
    unit_identifier: $ => prec(2, choice(
      $.number_literal,
      $._io_expressions
    )),

    format_identifier: $ => choice(
      $._statement_label_reference,
      $._io_expressions
    ),

    // This is a limited set of expressions that can be used in IO statements
    // precedence is used to override a conflict with the complex literal
    _io_expressions: $ => prec(2, choice(
      '*',
      $.string_literal,
      $.identifier,
      $.derived_type_member_expression,
      $.concatenation_expression,
      $.math_expression,
      $.parenthesized_expression,
      $.call_expression
    )),

    _expression: $ => choice(
      $.number_literal,
      $.complex_literal,
      $.string_literal,
      $.boolean_literal,
      $.identifier,
      $.derived_type_member_expression,
      $.logical_expression,
      $.relational_expression,
      $.concatenation_expression,
      $.math_expression,
      $.parenthesized_expression,
      $.implied_do_loop_expression,
      $.call_expression
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    derived_type_member_expression: $ => prec.right(PREC.TYPE_MEMBER, seq(
      $._expression,
      '%',
      $._expression
    )),

    logical_expression: $ => choice(
      prec.left(PREC.LOGICAL_OR, seq($._expression, caseInsensitive('.or.'), $._expression)),
      prec.left(PREC.LOGICAL_AND, seq($._expression, caseInsensitive('.and.'), $._expression)),
      prec.left(PREC.LOGICAL_EQUIV, seq($._expression, caseInsensitive('.eqv.'), $._expression)),
      prec.left(PREC.LOGICAL_EQUIV, seq($._expression, caseInsensitive('.neqv.'), $._expression)),
      prec.left(PREC.LOGICAL_NOT, seq(caseInsensitive('.not.'), $._expression))
    ),

    relational_expression: $ => prec.left(PREC.RELATIONAL, seq(
      $._expression,
      choice(
        '<',
        caseInsensitive('.lt.'),
        '>',
        caseInsensitive('.gt.'),
        '<=',
        caseInsensitive('.le.'),
        '>=',
        caseInsensitive('.ge.'),
        '==',
        caseInsensitive('.eq.'),
        '/=',
        caseInsensitive('.ne.')
      ),
      $._expression
    )),

    concatenation_expression: $ => prec.right(PREC.ADDITIVE, seq(
      $._expression,
      '//',
      $._expression
    )),

    math_expression: $ => choice(
      prec.left(PREC.ADDITIVE, seq($._expression, '+', $._expression)),
      prec.left(PREC.ADDITIVE, seq($._expression, '-', $._expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($._expression, '*', $._expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($._expression, '/', $._expression)),
      prec.left(PREC.EXPONENT, seq($._expression, '**', $._expression)),
      prec.right(PREC.UNARY, seq('-', $._expression)),
      prec.right(PREC.UNARY, seq('+', $._expression))
    ),

    call_expression: $ => prec(
      PREC.CALL,
      seq($.identifier, $.argument_list)
    ),

    argument_list: $ => prec.dynamic(
      1,
      seq(
        '(',
        commaSep(choice(
          $.keyword_argument,
          $.array_slice,
          $.assumed_size,
          $._expression
        )),
        ')'
      )
    ),

    // precedence is used to prevent conflict with assignment expression
    keyword_argument: $ => prec(1, seq(
      $.identifier,
      '=',
      choice($._expression, $.assumed_size, $.assumed_shape)
    )),

    number_literal: $ => token(
      choice(
        // integer, real with and without exponential notation
        /[-+]?\d*(\.\d*)?([eEdD][-+]?\d+)?/,
        // binary literal
        /[-+]?[bB]?'[01]+'[bB]?/,
        // octal literal
        /[-+]?[oO]?'[0-8]+'[oO]?/,
        // hexcadecimal
        /[-+]?[zZ]?'[0-9a-fA-F]+'[zZ]?/
      )),

    complex_literal: $ => prec.left(1, seq(
      '(',
      choice($.number_literal, $.identifier),
      ',',
      choice($.number_literal, $.identifier),
      ')'
    )),

    string_literal: $ => choice(
      $._double_quoted_string,
      $._single_quoted_string
    ),

    _double_quoted_string: $ => token(seq(
      '"',
      repeat(choice(/[^"\n]/, /""./)),
      '"')
    ),

    _single_quoted_string: $ => token(seq(
      "'",
      repeat(choice(/[^'\n]/, /''./)),
      "'")
    ),

    boolean_literal: $ => token(
      choice(
        caseInsensitive('.true.'),
        caseInsensitive('.false.')
      )
    ),

    identifier: $ => /[a-zA-Z_]\w*/,
